--- a/customers.html
+++ b/customers.html
@@ -23,5 +23,134 @@
         <li><button type="button">Sign Up</button></li>
       </ul>
     </header>
+    <main>
+      <!-- Our Client -->
+      <section>
+        <h1>Our Clients</h1>
+        <ul>
+          <li>
+            <a href="https://www.airbnb.com.ua/"
+              ><img
+                src="./images/airbnb-logo.svg"
+                alt="airbnb-logo"
+                width="159"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.google.com/"
+              ><img
+                src="./images/google-logo.svg"
+                alt="google-logo"
+                width="146"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.microsoft.com/"
+              ><img
+                src="./images/microsoft-logo.svg"
+                alt="microsoft-logo"
+                width="213"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.fedex.com/"
+              ><img
+                src="./images/fedEx-logo.svg"
+                alt="fedEx-logo.png"
+                width="140"
+            /></a>
+          </li>
+        </ul>
+      </section>
+      <!-- Choose Product? -->
+      <section>
+        <h2></h2>
+        <ul>
+          <li>
+            <img src="" alt="" />
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3></h3>
+            <p></p>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3></h3>
+            <p></p>
+          </li>
+        </ul>
+      </section>
+      <!-- How Product -->
+      <section>
+        <h2>How Product Work?</h2>
+        <ol>
+          <li>
+            <img
+              src="./images/mac1.jpg"
+              alt="mac"
+              width="500"
+              height="280"
+            /><span>STEP 1</span>
+            <h3>Apply for a product</h3>
+            <p>
+              Completing our easy step-by-step application form gives you access
+              to multiple business with multiple products. We analyse your
+              business through our proprietary credit analysis technology
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/mac2.jpg"
+              alt="mac"
+              width="500"
+              height="280"
+            /><span>STEP 2</span>
+            <h3>Pay fully refundable</h3>
+            <p>
+              Product will contactting you instantly to receive payment of the
+              Application Fee. if no offer of product is available, your fee
+              will be fully refunded.
+            </p>
+          </li>
+          <li>
+            <img
+              src="./images/mac3.jpg"
+              alt="mac"
+              width="500"
+              height="280"
+            /><span>STEP 3</span>
+            <h3>Completion</h3>
+            <p>
+              Product will continue to liase between borrower and manager to
+              procees and complete a quick and efficient settlement
+            </p>
+          </li>
+        </ol>
+      </section>
+    </main>
+    <footer>
+      <a href="./index.html" alt="logo" width="40" height="36"
+        ><img src="./images/logo.svg" />Product</a
+      >
+      <b>Resource</b>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">FAQ</a></li>
+      </ul>
+      <b>Legal Stuff</b>
+      <ul>
+        <li><a href="">Disclaimer</a></li>
+        <li><a href="">Financing</a></li>
+        <li><a href="">Privacy Policy</a></li>
+        <li><a href="">Terms of Service</a></li>
+      </ul>
+      <b>knowing you're always on the best energy deal. </b>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+    </footer>
   </body>
 </html>
