--- a/pricing.html
+++ b/pricing.html
@@ -23,5 +23,160 @@
         <li><button type="button">Sign Up</button></li>
       </ul>
     </header>
+    <main>
+      <!-- Price -->
+      <section>
+        <h1>PRICING</h1>
+        <h2>Let’s get some real work done here.</h2>
+        <p>
+          Prodict is your perfect solution for working. Get started now for free
+        </p>
+        <ul>
+          <li>
+            <h3>Free</h3>
+            <p>Brief price description</p>
+            <p>0</p>
+            <span>$</span>
+            <p>Per / month</p>
+            <ul>
+              <li>
+                <p>Only 2 Operators</p>
+              </li>
+              <li>
+                <p>Notifications</p>
+              </li>
+              <li>
+                <p>Landing Pages</p>
+              </li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Standard</h3>
+            <p>Brief price description</p>
+            <p>5</p>
+            <span>$</span>
+            <p>Per / month</p>
+            <ul>
+              <li>
+                <p>5+ Operators</p>
+              </li>
+              <li>
+                <p>Notifications</p>
+              </li>
+              <li>
+                <p>Landing Pages</p>
+              </li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Premium</h3>
+            <p>Brief price description</p>
+            <p>10</p>
+            <span>$</span>
+            <p>Per / month</p>
+            <ul>
+              <li>
+                <p>10+ Operators</p>
+              </li>
+              <li>
+                <p>Notifications</p>
+              </li>
+              <li>
+                <p>Landing Pages</p>
+              </li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+        </ul>
+      </section>
+      <!-- Enterprise -->
+      <section>
+        <h2>ENTERPRISE</h2>
+        <h3>Are you interested in a custom-tailored plan?</h3>
+        <p>
+          Product is a set of advanced features for really large teams with
+          projects.
+        </p>
+        <button type="button">Get in touch with us</button>
+      </section>
+      <!-- Product -->
+      <section>
+        <h2>Product is being used with great effects alongside:</h2>
+        <img src="./images/amico-product.png" alt="laptop" width="528" />
+        <ul>
+          <li>
+            <h3>Enterpreneur</h3>
+            <p>
+              Product is a great way to help medium and samall enterprise owners
+              achieve their goals
+            </p>
+          </li>
+          <li>
+            <h3>Accountants</h3>
+            <p>
+              Whether you are working on contract with clients, or on other key
+              accounting documents, Product is for you
+            </p>
+          </li>
+          <li>
+            <h3>Universities</h3>
+            <p>
+              Organize university projects and have documents easily graded
+              online with Product
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Question -->
+      <section>
+        <h2>Frequently asked question</h2>
+        <p>Something is not clear? You need help? Check our FAQ section</p>
+        <ul>
+          <li>What are my payment option?</li>
+          <li>
+            How can I invite collaborator to platform?
+            <p>
+              After creating your account you will have an oppurtunity to create
+              your first project that will be associated withthe collaborators
+              e-mail. An invitation will be sent automatically. Then, invited
+              user will have to confirm his account by e-mail and finish userd
+              onboarding.
+            </p>
+          </li>
+          <li>Can I upgrade my plan?</li>
+          <li>Can I cancel my plan at anytime?</li>
+        </ul>
+      </section>
+      <!-- promo -->
+      <section>
+        <h2 hidden>Promo</h2>
+        <p>Join 100 Compannies who boost their business with Product</p>
+        <button type="button">Get This</button>
+        <img src="./images/screen.png" alt="screen" width="351" />
+      </section>
+    </main>
+    <footer>
+      <a href="./index.html" alt="logo" width="40" height="36"
+        ><img src="./images/logo.svg" />Product</a
+      >
+      <b>Resource</b>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">FAQ</a></li>
+      </ul>
+      <b>Legal Stuff</b>
+      <ul>
+        <li><a href="">Disclaimer</a></li>
+        <li><a href="">Financing</a></li>
+        <li><a href="">Privacy Policy</a></li>
+        <li><a href="">Terms of Service</a></li>
+      </ul>
+      <b>knowing you're always on the best energy deal. </b>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+    </footer>
   </body>
 </html>
