finished page price and customers

--- a/customers.html
+++ b/customers.html
@@ -64,22 +64,72 @@
       </section>
       <!-- Choose Product? -->
       <section>
-        <h2></h2>
+        <h2>Why Choose Product?</h2>
         <ul>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <div
+              style="
+                background-color: #02897a;
+                width: 50px;
+                height: 50px;
+                border-radius: 19px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              "
+            >
+              <img
+                src="./images/icon1.svg"
+                alt="icon1"
+                width="16"
+                height="18"
+              />
+            </div>
+            <h3>Special Business</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <div
+              style="
+                background-color: #4d8dff;
+                width: 50px;
+                height: 50px;
+                border-radius: 19px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              "
+            >
+              <img src="./images/icon2.svg" alt="icon2" />
+            </div>
+            <h3>Instant Result</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
           </li>
           <li>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
+            <div
+              style="
+                background-color: #f03e3d;
+                width: 50px;
+                height: 50px;
+                border-radius: 19px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+              "
+            >
+              <img src="./images/icon3.svg" alt="icon3" />
+            </div>
+            <h3>Fastest way to organize</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
           </li>
         </ul>
       </section>
@@ -129,6 +179,32 @@
             </p>
           </li>
         </ol>
+        <button type="button">Get in touch with us</button>
+      </section>
+      <!-- Offers -->
+      <section>
+        <h2>Join thousand of other who have already received offers</h2>
+        <ul>
+          <li>
+            <img src="" alt="" />
+            <h3>Business</h3>
+            <p>Cash Flow Asset Backed Receivables Finance</p>
+            <a href="">Find the best business product</a>
+          </li>
+          <li>
+            <img src="" alt="" />
+            <h3>Enterprise</h3>
+            <p>Site Acquisition Bridge Development Financing</p>
+            <a href="">Find the best business product</a>
+          </li>
+        </ul>
+      </section>
+      <!-- promo -->
+      <section>
+        <h2 hidden>Promo</h2>
+        <p>Join 100 Compannies who boost their business with Product</p>
+        <button type="button">Get This</button>
+        <img src="./images/screen.png" alt="screen" width="351" />
       </section>
     </main>
     <footer>
