--- a/customers.html
+++ b/customers.html
@@ -8,8 +8,13 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" alt="logo" width="40" height="36"
-          ><img src="./images/logo.svg" />Product</a
+        <a href="./index.html"
+          ><img
+            src="./images/logo.svg"
+            alt="logo"
+            width="40"
+            height="36"
+          />Product</a
         >
         <ul>
           <li><a href="./index.html">Product</a></li>
@@ -186,13 +191,13 @@
         <h2>Join thousand of other who have already received offers</h2>
         <ul>
           <li>
-            <img src="" alt="" />
+            <!-- <img src="" alt="" /> -->
             <h3>Business</h3>
             <p>Cash Flow Asset Backed Receivables Finance</p>
             <a href="">Find the best business product</a>
           </li>
           <li>
-            <img src="" alt="" />
+            <!-- <img src="" alt="" /> -->
             <h3>Enterprise</h3>
             <p>Site Acquisition Bridge Development Financing</p>
             <a href="">Find the best business product</a>
@@ -208,8 +213,13 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html" alt="logo" width="40" height="36"
-        ><img src="./images/logo.svg" />Product</a
+      <a href="./index.html"
+        ><img
+          src="./images/logo.svg"
+          alt="logo"
+          width="40"
+          height="36"
+        />Product</a
       >
       <b>Resource</b>
       <ul>
