--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" alt="logo" width="40" height="36"
-          ><img src="./images/logo.svg" />Product</a
+        <a href="./index.html"
+          ><img
+            src="./images/logo.svg"
+            alt="logo"
+            width="40"
+            height="36"
+          />Product</a
         >
         <ul>
           <li><a href="./index.html">Product</a></li>
@@ -42,7 +47,7 @@
         <img
           src="./images/hero-img.png"
           alt="people"
-          wedth="610"
+          width="610"
           height="555"
         />
       </section>
@@ -340,8 +345,13 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html" alt="logo" width="40" height="36"
-        ><img src="./images/logo.svg" />Product</a
+      <a href="./index.html"
+        ><img
+          src="./images/logo.svg"
+          alt="logo"
+          width="40"
+          height="36"
+        />Product</a
       >
       <b>Resource</b>
       <ul>
