--- a/pricing.html
+++ b/pricing.html
@@ -8,8 +8,13 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" alt="logo" width="40" height="36"
-          ><img src="./images/logo.svg" />Product</a
+        <a href="./index.html"
+          ><img
+            src="./images/logo.svg"
+            alt="logo"
+            width="40"
+            height="36"
+          />Product</a
         >
         <ul>
           <li><a href="./index.html">Product</a></li>
@@ -158,8 +163,13 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html" alt="logo" width="40" height="36"
-        ><img src="./images/logo.svg" />Product</a
+      <a href="./index.html"
+        ><img
+          src="./images/logo.svg"
+          alt="logo"
+          width="40"
+          height="36"
+        />Product</a
       >
       <b>Resource</b>
       <ul>
