--- a/index.html
+++ b/index.html
@@ -3,30 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Business promotion</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"
-          ><img
-            src="./images/logo.svg"
-            alt="logo"
-            width="40"
-            height="36"
-          />Product</a
-        >
-        <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./customers.html">Customers</a></li>
-          <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="">Resources</a></li>
+    <header class="header">
+      <div class="container">
+        <nav class="header-nav">
+          <a class="link-logo link" href="./index.html"
+            ><svg class="header-logo" width="40" height="36">
+              <use href="./images/icons.svg#icon-logo"></use>
+            </svg>
+            Product</a
+          >
+          <ul class="header-menu">
+            <li><a class="link current" href="./index.html">Product</a></li>
+            <li><a class="link" href="./customers.html">Customers</a></li>
+            <li><a class="link" href="./pricing.html">Pricing</a></li>
+            <li><a class="link" href="">Resources</a></li>
+          </ul>
+        </nav>
+        <ul class="btn-menu">
+          <li><button class="button-in" type="button">Sign In</button></li>
+          <li><button class="button-up" type="button">Sign Up</button></li>
         </ul>
-      </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- hero -->
@@ -56,18 +61,30 @@
         <h2>Product was Built Specifically for You</h2>
         <ul>
           <li>
+            <svg width="11" height="18">
+              <use href="./images/icons.svg#icon-arrow"></use>
+            </svg>
             <h3>First click tests</h3>
             <p>While most people enjoy casino gambling,</p>
           </li>
           <li>
+            <svg width="18" height="18">
+              <use href="./images/icons.svg#icon-snake"></use>
+            </svg>
             <h3>Design surveys</h3>
             <p>Sports betting, lottery and bingo playing for the fun</p>
           </li>
           <li>
+            <svg width="16" height="18">
+              <use href="./images/icons.svg#icon-heart"></use>
+            </svg>
             <h3>Preference tests</h3>
             <p>The Myspace page defines the individual.</p>
           </li>
           <li>
+            <svg width="14" height="18">
+              <use href="./images/icons.svg#icon-time"></use>
+            </svg>
             <h3>Five second tests</h3>
             <p>Personal choices and the overall personality of the person.</p>
           </li>
@@ -119,15 +136,24 @@
         </p>
         <ul>
           <li>
+            <svg width="16" height="12">
+              <use href="./images/icons.svg#icon-path"></use>
+            </svg>
             <p>Never worry about overpaying for your energy again.</p>
           </li>
           <li>
+            <svg width="16" height="12">
+              <use href="./images/icons.svg#icon-path"></use>
+            </svg>
             <p>
               We will only switch you to energy companies that we trust and will
               treat you right
             </p>
           </li>
           <li>
+            <svg width="16" height="12">
+              <use href="./images/icons.svg#icon-path"></use>
+            </svg>
             <p>We track the markets daily and know where the savings are.</p>
           </li>
         </ul>
@@ -345,14 +371,12 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html"
-        ><img
-          src="./images/logo.svg"
-          alt="logo"
-          width="40"
-          height="36"
-        />Product</a
-      >
+      <a href="./index.html">
+        <svg class="header-logo" width="40" height="36">
+          <use href="./images/icons.svg#icon-logo"></use>
+        </svg>
+        Product
+      </a>
       <b>Resource</b>
       <ul>
         <li><a href="">About Us</a></li>
