add css  header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Business promotion</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header section">
       <div class="container">
         <nav class="header-nav">
           <a class="link-logo link" href="./index.html"
