--- a/index.html
+++ b/index.html
@@ -35,61 +35,89 @@
     </header>
     <main>
       <!-- hero -->
-      <section>
-        <h1>Work at the speed of thought</h1>
-        <p>
-          Tools, tutorials, design and innovation experts, all in one place! The
-          most intuitive way to imagine your next user experience.
-        </p>
-        <ul>
-          <li>
-            <button type="button">Get started</button>
-          </li>
-          <li>
-            <button type="button">Watch the Video</button>
-          </li>
-        </ul>
-        <img
-          src="./images/hero-img.png"
-          alt="people"
-          width="610"
-          height="555"
-        />
+      <section class="section hero-section">
+        <div class="container">
+          <div class="hero-container">
+            <h1 class="hero-title">Work at the speed of thought</h1>
+            <p class="hero-text">
+              Tools, tutorials, design and innovation experts, all in<br />
+              one place! The most intuitive way to imagine your<br />
+              next user experience.
+            </p>
+            <ul class="hero-list">
+              <li>
+                <button class="hero-btn" type="button">Get started</button>
+              </li>
+              <li>
+                <button class="hero-video-btn" type="button">
+                  <svg class="icon-play" width="20" height="18">
+                    <use href="./images/icons.svg#icon-play"></use>
+                  </svg>
+                  Watch the Video
+                </button>
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/hero-img.png"
+            alt="people"
+            width="610"
+            height="555"
+          />
+        </div>
       </section>
       <!-- Product -->
-      <section>
-        <h2>Product was Built Specifically for You</h2>
-        <ul>
-          <li>
-            <svg width="11" height="18">
-              <use href="./images/icons.svg#icon-arrow"></use>
-            </svg>
-            <h3>First click tests</h3>
-            <p>While most people enjoy casino gambling,</p>
-          </li>
-          <li>
-            <svg width="18" height="18">
-              <use href="./images/icons.svg#icon-snake"></use>
-            </svg>
-            <h3>Design surveys</h3>
-            <p>Sports betting, lottery and bingo playing for the fun</p>
-          </li>
-          <li>
-            <svg width="16" height="18">
-              <use href="./images/icons.svg#icon-heart"></use>
-            </svg>
-            <h3>Preference tests</h3>
-            <p>The Myspace page defines the individual.</p>
-          </li>
-          <li>
-            <svg width="14" height="18">
-              <use href="./images/icons.svg#icon-time"></use>
-            </svg>
-            <h3>Five second tests</h3>
-            <p>Personal choices and the overall personality of the person.</p>
-          </li>
-        </ul>
-        <button type="button">SIGN UP NOW</button>
+      <section class="section product-section">
+        <div class="container">
+          <h2 class="product-title">Product was Built Specifically for You</h2>
+          <ul class="product-list">
+            <li class="product-card">
+              <div class="arrow-container arrow">
+                <svg class="icon-arrow" width="11" height="18">
+                  <use href="./images/icons.svg#icon-arrow"></use>
+                </svg>
+              </div>
+              <h3 class="card-title">First click tests</h3>
+              <p class="product-text">
+                While most people enjoy casino gambling,
+              </p>
+            </li>
+            <li class="product-card">
+              <div class="snake-container snake">
+                <svg class="icon-snake" width="18" height="18">
+                  <use href="./images/icons.svg#icon-snake"></use>
+                </svg>
+              </div>
+              <h3 class="card-title">Design surveys</h3>
+              <p class="product-text">
+                Sports betting, lottery and bingo playing for the fun
+              </p>
+            </li>
+            <li class="product-card">
+              <div class="heart-container heart">
+                <svg class="icon-heart" width="16" height="18">
+                  <use href="./images/icons.svg#icon-heart"></use>
+                </svg>
+              </div>
+              <h3 class="card-title">Preference tests</h3>
+              <p class="product-text">
+                The Myspace page defines the individual.
+              </p>
+            </li>
+            <li class="product-card">
+              <div class="time-container time">
+                <svg class="icon-time" width="14" height="18">
+                  <use href="./images/icons.svg#icon-time"></use>
+                </svg>
+              </div>
+              <h3 class="card-title">Five second tests</h3>
+              <p class="product-text">
+                Personal choices and the overall personality of the person.
+              </p>
+            </li>
+          </ul>
+          <button class="product-btn" type="button">SIGN UP NOW</button>
+        </div>
       </section>
       <!-- Managment -->
       <section>
