add css in section managment

--- a/index.html
+++ b/index.html
@@ -120,34 +120,42 @@
         </div>
       </section>
       <!-- Managment -->
-      <section>
-        <h2>Effortless Validation for<span>Management</span></h2>
-        <p>
-          The Myspace page defines the individual, his or her characteristics,
-          traits, personal choices and the overall personality of the person.
-        </p>
-        <ul>
-          <li>
-            <h3>Accessory makers</h3>
-            <p>
-              While most people enjoy casino gambling, sports betting, lottery
-              and bingo playing for the fun
+      <section class="section managment-section">
+        <div class="container">
+          <div class="managment-container">
+            <h2 class="managment-title">
+              Effortless Validation for
+              <span class="managment-title-decor">Management</span>
+            </h2>
+            <p class="managment-text">
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices and the overall
+              personality of the person.
             </p>
-          </li>
-          <li>
-            <h3>Alterationists</h3>
-            <p>
-              If you are looking for a new way to promote your business that
-              won’t cost you more money,
-            </p>
-          </li>
-        </ul>
-        <img
-          src="./images/management-img.png"
-          alt="document"
-          width="540"
-          height="500"
-        />
+            <ul class="managment-list">
+              <li class="managment-card">
+                <h3 class="managment-card-title">Accessory makers</h3>
+                <p class="managment-card-text">
+                  While most people enjoy casino gambling, sports betting,
+                  lottery and bingo playing for the fun
+                </p>
+              </li>
+              <li class="managment-card">
+                <h3 class="managment-card-title">Alterationists</h3>
+                <p class="managment-card-text text-card">
+                  If you are looking for a new way to promote your business that
+                  won’t cost you more money,
+                </p>
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/management-img.png"
+            alt="document"
+            width="540"
+            height="500"
+          />
+        </div>
       </section>
       <!-- Support -->
       <section>
