add css in section support

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </svg>
               </div>
               <h3 class="card-title">First click tests</h3>
-              <p class="product-text">
+              <p class="product-card-text">
                 While most people enjoy casino gambling,
               </p>
             </li>
@@ -89,7 +89,7 @@
                 </svg>
               </div>
               <h3 class="card-title">Design surveys</h3>
-              <p class="product-text">
+              <p class="product-card-text">
                 Sports betting, lottery and bingo playing for the fun
               </p>
             </li>
@@ -100,7 +100,7 @@
                 </svg>
               </div>
               <h3 class="card-title">Preference tests</h3>
-              <p class="product-text">
+              <p class="product-card-text">
                 The Myspace page defines the individual.
               </p>
             </li>
@@ -111,7 +111,7 @@
                 </svg>
               </div>
               <h3 class="card-title">Five second tests</h3>
-              <p class="product-text">
+              <p class="product-card-text">
                 Personal choices and the overall personality of the person.
               </p>
             </li>
@@ -158,41 +158,59 @@
         </div>
       </section>
       <!-- Support -->
-      <section>
-        <img
-          src="./images/support-img.png"
-          alt="laptop"
-          width="540"
-          height="500"
-        />
-        <h2>Easier decision making for<span>Customer Support</span></h2>
-        <p>
-          The Myspace page defines the individual, his or her characteristics,
-          traits, personal choices and the overall personality of the person.
-        </p>
-        <ul>
-          <li>
-            <svg width="16" height="12">
-              <use href="./images/icons.svg#icon-path"></use>
-            </svg>
-            <p>Never worry about overpaying for your energy again.</p>
-          </li>
-          <li>
-            <svg width="16" height="12">
-              <use href="./images/icons.svg#icon-path"></use>
-            </svg>
-            <p>
-              We will only switch you to energy companies that we trust and will
-              treat you right
+      <section class="section support-section">
+        <div class="container">
+          <img
+            src="./images/support-img.png"
+            alt="laptop"
+            width="540"
+            height="500"
+          />
+          <div class="support-container">
+            <h2 class="support-title">
+              Easier decision making for
+              <span class="support-title-decor">Customer Support</span>
+            </h2>
+            <p class="support-text">
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices and the overall
+              personality of the person.
             </p>
-          </li>
-          <li>
-            <svg width="16" height="12">
-              <use href="./images/icons.svg#icon-path"></use>
-            </svg>
-            <p>We track the markets daily and know where the savings are.</p>
-          </li>
-        </ul>
+            <ul class="support-list">
+              <li class="support-card">
+                <div class="support-path one">
+                  <svg class="icon-path" width="16" height="12">
+                    <use href="./images/icons.svg#icon-path"></use>
+                  </svg>
+                </div>
+                <p class="support-card-text">
+                  Never worry about overpaying for your energy again.
+                </p>
+              </li>
+              <li class="support-card">
+                <div class="support-path two">
+                  <svg class="icon-path" width="16" height="12">
+                    <use href="./images/icons.svg#icon-path"></use>
+                  </svg>
+                </div>
+                <p class="support-card-text">
+                  We will only switch you to energy companies that we trust and
+                  will treat you right
+                </p>
+              </li>
+              <li class="support-card">
+                <div class="support-path three">
+                  <svg class="icon-path" width="16" height="12">
+                    <use href="./images/icons.svg#icon-path"></use>
+                  </svg>
+                </div>
+                <p class="support-card-text">
+                  We track the markets daily and know where the savings are.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
       <!-- Collaborative -->
       <section>
