--- a/index.html
+++ b/index.html
@@ -123,26 +123,26 @@
       <section class="section managment-section">
         <div class="container">
           <div class="managment-container">
-            <h2 class="managment-title">
+            <h2 class="title">
               Effortless Validation for
-              <span class="managment-title-decor">Management</span>
+              <span class="title-decor">Management</span>
             </h2>
-            <p class="managment-text">
+            <p class="text">
               The Myspace page defines the individual, his or her
               characteristics, traits, personal choices and the overall
               personality of the person.
             </p>
             <ul class="managment-list">
               <li class="managment-card">
-                <h3 class="managment-card-title">Accessory makers</h3>
-                <p class="managment-card-text">
+                <h3 class="card-title">Accessory makers</h3>
+                <p class="card-text">
                   While most people enjoy casino gambling, sports betting,
                   lottery and bingo playing for the fun
                 </p>
               </li>
               <li class="managment-card">
-                <h3 class="managment-card-title">Alterationists</h3>
-                <p class="managment-card-text text-card">
+                <h3 class="card-title">Alterationists</h3>
+                <p class="card-text last">
                   If you are looking for a new way to promote your business that
                   won’t cost you more money,
                 </p>
@@ -167,11 +167,11 @@
             height="500"
           />
           <div class="support-container">
-            <h2 class="support-title">
+            <h2 class="title">
               Easier decision making for
-              <span class="support-title-decor">Customer Support</span>
+              <span class="title-decor">Customer Support</span>
             </h2>
-            <p class="support-text">
+            <p class="text">
               The Myspace page defines the individual, his or her
               characteristics, traits, personal choices and the overall
               personality of the person.
@@ -183,7 +183,7 @@
                     <use href="./images/icons.svg#icon-path"></use>
                   </svg>
                 </div>
-                <p class="support-card-text">
+                <p class="card-text">
                   Never worry about overpaying for your energy again.
                 </p>
               </li>
@@ -193,7 +193,7 @@
                     <use href="./images/icons.svg#icon-path"></use>
                   </svg>
                 </div>
-                <p class="support-card-text">
+                <p class="card-text">
                   We will only switch you to energy companies that we trust and
                   will treat you right
                 </p>
@@ -204,7 +204,7 @@
                     <use href="./images/icons.svg#icon-path"></use>
                   </svg>
                 </div>
-                <p class="support-card-text">
+                <p class="card-text last">
                   We track the markets daily and know where the savings are.
                 </p>
               </li>
@@ -213,64 +213,79 @@
         </div>
       </section>
       <!-- Collaborative -->
-      <section>
-        <h2>Optimisation for<span>Collaborative</span></h2>
-        <p>
-          Few would argue that, despite the advancements of feminism over the
-          past three decades, women still face a double standard when it comes
-          to their behavior.
-        </p>
-        <ul>
-          <li>
-            <h3>Accessory makers</h3>
-            <p>
-              While most people enjoy casino gambling, sports betting, lottery
-              and bingo playing for the fun
+      <section class="section collaborative-section">
+        <div class="container">
+          <div class="collaborative-container">
+            <h2 class="title">
+              Optimisation for
+              <span class="title-decor">Collaborative</span>
+            </h2>
+            <p class="text">
+              Few would argue that, despite the advancements of feminism over
+              the past three decades, women still face a double standard when it
+              comes to their behavior.
             </p>
-          </li>
-          <li>
-            <h3>Alterationists</h3>
-            <p>
-              If you are looking for a new way to promote your business that
-              won’t cost you more money,
-            </p>
-          </li>
-        </ul>
-        <img
-          src="./images/collaboration-img.png"
-          alt="document"
-          width="540"
-          height="500"
-        />
+            <ul class="collaborative-list">
+              <li class="collaborative-card">
+                <h3 class="card-title">Accessory makers</h3>
+                <p class="card-text">
+                  While most people enjoy casino gambling, sports betting,
+                  lottery and bingo playing for the fun
+                </p>
+              </li>
+              <li class="collaborative-card">
+                <h3 class="card-title">Alterationists</h3>
+                <p class="card-text last">
+                  If you are looking for a new way to promote your business that
+                  won’t cost you more money,
+                </p>
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/collaboration-img.png"
+            alt="document"
+            width="540"
+            height="500"
+          />
+        </div>
       </section>
       <!-- Process -->
-      <section>
-        <h2>Quick & Easy Process</h2>
-        <p>
+      <section class="section process-section">
+        <h2 class="section-title">Quick & Easy Process</h2>
+        <p class="section-text">
           Do you require some help for your project: Conception workshop,
           prototyping, marketing strategy, landing page, Ux/UI?
         </p>
-        <ul>
-          <li>
+        <ul class="process-list">
+          <li class="process-card">
             <img
               src="./images/avatar1.png"
               alt="women"
               width="98"
               height="98"
             />
-            <p>I can take care of your pitch</p>
+            <div class="wrap-card-text">
+              <p>I can take care of your pitch</p>
+            </div>
           </li>
-          <li>
+          <li class="process-card">
             <img src="./images/avatar2.png" alt="women" width="98" />
-            <p>I can prototype your app</p>
+            <div class="wrap-card-text">
+              <p>I can prototype your app</p>
+            </div>
           </li>
-          <li>
+          <li class="process-card">
             <img src="./images/avatar3.png" alt="men" width="98" />
-            <p>I can take care of your pitch.</p>
+            <div class="wrap-card-text">
+              <p>I can take care of your pitch.</p>
+            </div>
           </li>
-          <li>
+          <li class="process-card">
             <img src="./images/avatar4.png" alt="men" width="98" />
-            <p>I can help marketing strategy</p>
+            <div class="wrap-card-text">
+              <p>I can help marketing strategy</p>
+            </div>
           </li>
         </ul>
         <button type="button">Contact our expert</button>
