--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <use href="./images/icons.svg#icon-path"></use>
                   </svg>
                 </div>
-                <p class="card-text">
+                <p class="support-text">
                   Never worry about overpaying for your energy again.
                 </p>
               </li>
@@ -193,7 +193,7 @@
                     <use href="./images/icons.svg#icon-path"></use>
                   </svg>
                 </div>
-                <p class="card-text">
+                <p class="support-text">
                   We will only switch you to energy companies that we trust and
                   will treat you right
                 </p>
@@ -204,7 +204,7 @@
                     <use href="./images/icons.svg#icon-path"></use>
                   </svg>
                 </div>
-                <p class="card-text last">
+                <p class="support-text">
                   We track the markets daily and know where the savings are.
                 </p>
               </li>
