--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
               </p>
             </li>
           </ul>
-          <button class="product-btn" type="button">SIGN UP NOW</button>
+          <button class="product-btn hero-btn" type="button">
+            SIGN UP NOW
+          </button>
         </div>
       </section>
       <!-- Managment -->
@@ -252,83 +254,104 @@
       </section>
       <!-- Process -->
       <section class="section process-section">
-        <h2 class="section-title">Quick & Easy Process</h2>
-        <p class="section-text">
-          Do you require some help for your project: Conception workshop,
-          prototyping, marketing strategy, landing page, Ux/UI?
-        </p>
-        <ul class="process-list">
-          <li class="process-card">
-            <img
-              src="./images/avatar1.png"
-              alt="women"
-              width="98"
-              height="98"
-            />
-            <div class="wrap-card-text">
-              <p>I can take care of your pitch</p>
-            </div>
-          </li>
-          <li class="process-card">
-            <img src="./images/avatar2.png" alt="women" width="98" />
-            <div class="wrap-card-text">
-              <p>I can prototype your app</p>
-            </div>
-          </li>
-          <li class="process-card">
-            <img src="./images/avatar3.png" alt="men" width="98" />
-            <div class="wrap-card-text">
-              <p>I can take care of your pitch.</p>
-            </div>
-          </li>
-          <li class="process-card">
-            <img src="./images/avatar4.png" alt="men" width="98" />
-            <div class="wrap-card-text">
-              <p>I can help marketing strategy</p>
-            </div>
-          </li>
-        </ul>
-        <button type="button">Contact our expert</button>
+        <div class="container">
+          <h2 class="section-title">Quick & Easy Process</h2>
+          <p class="section-text">
+            Do you require some help for your project: Conception workshop,
+            prototyping, marketing strategy, landing page, Ux/UI?
+          </p>
+          <ul class="process-list">
+            <li class="process-card">
+              <img
+                src="./images/avatar1.png"
+                alt="women"
+                width="98"
+                height="98"
+              />
+              <div class="wrap-card-text">
+                <p class="process-text">I can take care of your pitch</p>
+              </div>
+            </li>
+            <li class="process-card reverse">
+              <img src="./images/avatar2.png" alt="women" width="98" />
+              <div class="wrap-card-text">
+                <p class="process-text">I can prototype your app</p>
+              </div>
+            </li>
+            <li class="process-card reverse">
+              <img src="./images/avatar3.png" alt="men" width="98" />
+              <div class="wrap-card-text">
+                <p class="process-text">I can take care of your pitch.</p>
+              </div>
+            </li>
+            <li class="process-card">
+              <img src="./images/avatar4.png" alt="men" width="98" />
+              <div class="wrap-card-text">
+                <p class="process-text">I can help marketing strategy</p>
+              </div>
+            </li>
+          </ul>
+          <button class="process-btn hero-btn" type="button">
+            Contact our expert
+          </button>
+        </div>
       </section>
       <!-- Strategies -->
-      <section>
-        <h2>Contents Strategies</h2>
-        <p>
-          We focus on ergonomics and meeting you where you work. It's only a
-          keystroke away.
-        </p>
-        <ul>
-          <li>
-            <img
-              src="./images/image1.jpg"
-              alt="document"
-              width="350"
-              height="185"
-            />
-            <p>By Wahid Ari | 03 March 2019</p>
-            <h3>Increasing Prosperity With Positive Thinking</h3>
-          </li>
-          <li>
-            <img
-              src="./images/image2.jpg"
-              alt="people"
-              width="350"
-              height="185"
-            />
-            <p>By Wahid Ari | 03 March 2019</p>
-            <h3>Motivation Is The First Step To Success</h3>
-          </li>
-          <li>
-            <img
-              src="./images/image3.jpg"
-              alt="city"
-              width="350"
-              height="185"
-            />
-            <p>By Wahid Ari | 03 March 2019</p>
-            <h3>Success Steps For Your Personal Or Business</h3>
-          </li>
-        </ul>
+      <section class="section strategies-section">
+        <div class="container">
+          <h2 class="strategies-title">Contents Strategies</h2>
+          <p class="strategies-text">
+            We focus on ergonomics and meeting you where you work. It's only a
+            keystroke away.
+          </p>
+          <ul class="strategies-list">
+            <li class="strategies-card">
+              <img
+                class="strategies-image"
+                src="./images/image1.jpg"
+                alt="document"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-card-text">
+                By <span class="text-decor">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-card-title">
+                Increasing Prosperity With Positive Thinking
+              </h3>
+            </li>
+            <li class="strategies-card">
+              <img
+                class="strategies-image"
+                src="./images/image2.jpg"
+                alt="people"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-card-text">
+                By <span class="text-decor">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-card-title">
+                Motivation Is The First Step To Success
+              </h3>
+            </li>
+            <li class="strategies-card">
+              <img
+                class="strategies-image"
+                src="./images/image3.jpg"
+                alt="city"
+                width="350"
+                height="185"
+              />
+              <p class="strategies-card-text">
+                By <span class="text-decor">Wahid Ari</span> | 03 March 2019
+              </p>
+              <h3 class="strategies-card-title">
+                Success Steps For Your Personal Or Business
+              </h3>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Price -->
       <section>
