add css in sections price

--- a/index.html
+++ b/index.html
@@ -354,68 +354,87 @@
         </div>
       </section>
       <!-- Price -->
-      <section>
-        <h2>Price Table</h2>
-        <p>We offer competitive price</p>
-        <ul>
-          <li>
-            <h3>Free</h3>
-            <p>Brief price description</p>
-            <p>0</p>
-            <span>$</span>
-            <p>Per / month</p>
-            <ul>
-              <li>
-                <p>Only 2 Operators</p>
-              </li>
-              <li>
-                <p>Notifications</p>
-              </li>
-              <li>
-                <p>Landing Pages</p>
-              </li>
-            </ul>
-            <button type="button">Order Now</button>
-          </li>
-          <li>
-            <h3>Standard</h3>
-            <p>Brief price description</p>
-            <p>5</p>
-            <span>$</span>
-            <p>Per / month</p>
-            <ul>
-              <li>
-                <p>5+ Operators</p>
-              </li>
-              <li>
-                <p>Notifications</p>
-              </li>
-              <li>
-                <p>Landing Pages</p>
-              </li>
-            </ul>
-            <button type="button">Order Now</button>
-          </li>
-          <li>
-            <h3>Premium</h3>
-            <p>Brief price description</p>
-            <p>10</p>
-            <span>$</span>
-            <p>Per / month</p>
-            <ul>
-              <li>
-                <p>10+ Operators</p>
-              </li>
-              <li>
-                <p>Notifications</p>
-              </li>
-              <li>
-                <p>Landing Pages</p>
-              </li>
-            </ul>
-            <button type="button">Order Now</button>
-          </li>
-        </ul>
+      <section class="section price-section">
+        <div class="container">
+          <h2 class="price-title">Price Table</h2>
+          <p class="price-text">We offer competitive price</p>
+
+          <ul class="price-list">
+            <li class="price-card">
+              <h3 class="price-card-title">Free</h3>
+              <p class="price-card-text">Brief price description</p>
+              <div class="wrap-price">
+                <p class="numeric-text">0</p>
+                <div class="wrap-per-offer">
+                  <span class="symbol">$</span>
+                  <p class="per-text">Per / month</p>
+                </div>
+              </div>
+              <ul class="offers-list">
+                <li class="offers">
+                  <p class="offers-text">Only 2 Operators</p>
+                </li>
+                <li class="offers">
+                  <p class="offers-text">Notifications</p>
+                </li>
+                <li class="offers">
+                  <p class="offers-text">Landing Pages</p>
+                </li>
+              </ul>
+              <button class="price-btn hero-btn" type="button">
+                Order Now
+              </button>
+            </li>
+            <li class="price-card background">
+              <h3 class="price-card-title accent">Standard</h3>
+              <p class="price-card-text accent">Brief price description</p>
+              <div class="wrap-price">
+                <p class="numeric-text accent">5</p>
+                <div class="wrap-per-offer">
+                  <span class="symbol accent">$</span>
+                  <p class="per-text accent">Per / month</p>
+                </div>
+              </div>
+              <ul class="offers-list accent">
+                <li class="offers accent">
+                  <p class="offers-text accent">5+ Operators</p>
+                </li>
+                <li class="offers accent">
+                  <p class="offers-text accent">Notifications</p>
+                </li>
+                <li class="offers accent">
+                  <p class="offers-text accent">Landing Pages</p>
+                </li>
+              </ul>
+              <button class="price-btn accent" type="button">Order Now</button>
+            </li>
+            <li class="price-card">
+              <h3 class="price-card-title">Premium</h3>
+              <p class="price-card-text">Brief price description</p>
+              <div class="wrap-price">
+                <p class="numeric-text">10</p>
+                <div class="wrap-per-offer">
+                  <span class="symbol">$</span>
+                  <p class="per-text">Per / month</p>
+                </div>
+              </div>
+              <ul class="offers-list">
+                <li class="offers">
+                  <p class="offers-text">10+ Operators</p>
+                </li>
+                <li class="offers">
+                  <p class="offers-text">Notifications</p>
+                </li>
+                <li class="offers">
+                  <p class="offers-text">Landing Pages</p>
+                </li>
+              </ul>
+              <button class="price-btn hero-btn" type="button">
+                Order Now
+              </button>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Clients -->
       <section>
