update css in sections clients

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
               <p class="strategies-card-text">
                 By <span class="text-decor">Wahid Ari</span> | 03 March 2019
               </p>
-              <h3 class="strategies-card-title">
+              <h3 class="strategies-card-title accent">
                 Motivation Is The First Step To Success
               </h3>
             </li>
