add section offer

--- a/customers.html
+++ b/customers.html
@@ -165,22 +165,62 @@
         </div>
       </section>
       <!-- Offers -->
-      <section>
-        <h2>Join thousand of other who have already received offers</h2>
-        <ul>
-          <li>
-            <!-- <img src="" alt="" /> -->
-            <h3>Business</h3>
-            <p>Cash Flow Asset Backed Receivables Finance</p>
-            <a href="">Find the best business product</a>
-          </li>
-          <li>
-            <!-- <img src="" alt="" /> -->
-            <h3>Enterprise</h3>
-            <p>Site Acquisition Bridge Development Financing</p>
-            <a href="">Find the best business product</a>
-          </li>
-        </ul>
+      <section class="section offer-section">
+        <div class="container">
+          <h2 class="section-title">
+            Join thousand of other who have already received offers
+          </h2>
+          <ul class="offer-list">
+            <li class="offer-item">
+              <div class="wrap-circle-lightning">
+                <div class="wrap-background-lightning">
+                  <div class="wrap-bg-icon-lightning">
+                    <img
+                      class="client-logo-lightning"
+                      src="./images/lightning.svg"
+                      alt="lightning"
+                      width="43"
+                      height="43"
+                    />
+                  </div>
+                </div>
+              </div>
+              <h3 class="offer-item-title">Business</h3>
+              <p class="offer-item-text">
+                Cash Flow<br />
+                Asset Backed<br />
+                Receivables Finance
+              </p>
+              <a class="offer-link link" href=""
+                >Find the best business product</a
+              >
+            </li>
+            <li class="offer-item">
+              <div class="wrap-circle-union">
+                <div class="wrap-background-union">
+                  <div class="wrap-bg-icon-union">
+                    <img
+                      class="client-logo-union"
+                      src="./images/union.svg"
+                      alt="lightning"
+                      width="43"
+                      height="43"
+                    />
+                  </div>
+                </div>
+              </div>
+              <h3 class="offer-item-title">Enterprise</h3>
+              <p class="offer-item-text">
+                Site Acquisition<br />
+                Bridge<br />
+                Development Financing
+              </p>
+              <a class="offer-link link" href=""
+                >Find the best business product</a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- promo -->
       <section class="section promo-section">
