update css and html on  section offer

--- a/customers.html
+++ b/customers.html
@@ -223,7 +223,7 @@
         </div>
       </section>
       <!-- promo -->
-      <section class="section promo-section">
+      <section class="section promo-section customers">
         <div class="container">
           <h2 class="visually-hidden">Promo</h2>
           <div class="wrap-promo">
@@ -243,7 +243,7 @@
         </div>
       </section>
     </main>
-    <footer class="section footer-section">
+    <footer class="section footer-section customers">
       <div class="container">
         <div class="footer-wrap-container">
           <div class="wrap-logo-sociale">
