The end page pricing

--- a/pricing.html
+++ b/pricing.html
@@ -121,65 +121,124 @@
         </div>
       </section>
       <!-- Enterprise -->
-      <section>
-        <h3>ENTERPRISE</h3>
-        <h2>Are you interested in a custom-tailored plan?</h2>
-        <p>
-          Product is a set of advanced features for really large teams with
-          projects.
-        </p>
-        <button type="button">Get in touch with us</button>
+      <section class="section enterprise-section">
+        <div class="container">
+          <h3 class="section-enterprise-title">ENTERPRISE</h3>
+          <h2 class="section-titile">
+            Are you interested in a custom-tailored plan?
+          </h2>
+          <p class="enterprise-section-text">
+            Product is a set of advanced features for really large teams with
+            projects.
+          </p>
+          <button class="enterprise-btn hero-btn" type="button">
+            Get in touch with us
+          </button>
+        </div>
       </section>
-      <!-- Product -->
-      <section>
-        <h2>Product is being used with great effects alongside:</h2>
-        <img src="./images/amico-product.png" alt="laptop" width="528" />
-        <ul>
-          <li>
-            <h3>Enterpreneur</h3>
-            <p>
-              Product is a great way to help medium and samall enterprise owners
-              achieve their goals
-            </p>
-          </li>
-          <li>
-            <h3>Accountants</h3>
-            <p>
-              Whether you are working on contract with clients, or on other key
-              accounting documents, Product is for you
-            </p>
-          </li>
-          <li>
-            <h3>Universities</h3>
-            <p>
-              Organize university projects and have documents easily graded
-              online with Product
-            </p>
-          </li>
-        </ul>
+      <!-- Effects -->
+      <section class="section effects-section">
+        <div class="container">
+          <h2 class="effects-title">
+            Product is being used with great effects alongside:
+          </h2>
+          <div class="wrap-effects image-list">
+            <img src="./images/amico-product.png" alt="laptop" width="528" />
+            <ul class="effects-list">
+              <li class="effects-item">
+                <div class="wrap-icon-title">
+                  <div class="wrap-effects-icon">
+                    <svg class="effect-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-feature1"></use>
+                    </svg>
+                  </div>
+                  <h3 class="effects-item-title">Enterpreneur</h3>
+                </div>
+                <p>
+                  Product is a great way to help medium and samall enterprise
+                  owners achieve their goals
+                </p>
+              </li>
+              <li class="effects-item">
+                <div class="wrap-icon-title">
+                  <div class="wrap-effects-icon">
+                    <svg class="effect-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-feature2"></use>
+                    </svg>
+                  </div>
+                  <h3 class="effects-item-title">Accountants</h3>
+                </div>
+                <p class="effects-item-text">
+                  Whether you are working on contract with clients, or on other
+                  key accounting documents, Product is for you
+                </p>
+              </li>
+              <li class="effects-item">
+                <div class="wrap-icon-title">
+                  <div class="wrap-effects-icon">
+                    <svg class="effect-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-feature3"></use>
+                    </svg>
+                  </div>
+                  <h3 class="effects-item-title">Universities</h3>
+                </div>
+                <p class="effects-item-text">
+                  Organize university projects and have documents easily<br />
+                  graded online with Product
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
       <!-- Question -->
-      <section>
-        <h2>Frequently asked question</h2>
-        <p>Something is not clear? You need help? Check our FAQ section</p>
-        <ul>
-          <li>What are my payment option?</li>
-          <li>
-            How can I invite collaborator to platform?
-            <p>
-              After creating your account you will have an oppurtunity to create
-              your first project that will be associated withthe collaborators
-              e-mail. An invitation will be sent automatically. Then, invited
-              user will have to confirm his account by e-mail and finish userd
-              onboarding.
-            </p>
-          </li>
-          <li>Can I upgrade my plan?</li>
-          <li>Can I cancel my plan at anytime?</li>
-        </ul>
+      <section class="section question-section">
+        <div class="container">
+          <h2 class="question-title">Frequently asked question</h2>
+          <p class="section-question-text">
+            Something is not clear? You need help? Check our FAQ section
+          </p>
+          <ul class="question-list">
+            <li class="question-item">
+              <svg class="icon-question" width="24" height="24">
+                <use href="./images/icons.svg#icon-plus-circle"></use>
+              </svg>
+              <b class="question-text">What are my payment option?</b>
+            </li>
+            <li class="question-item colum">
+              <div class="wrap-icon-text">
+                <svg class="icon-question" width="24" height="24">
+                  <use href="./images/icons.svg#icon-minus-circle"></use>
+                </svg>
+                <b class="question-text"
+                  >How can I invite collaborator to platform?</b
+                >
+              </div>
+              <p class="question-item-text">
+                After creating your account you will have an oppurtunity to
+                create your first project that will be associated withthe
+                collaborators e-mail. An invitation will be sent automatically.
+                Then, invited user will have to confirm his account by e-mail
+                and finish userd onboarding.
+              </p>
+            </li>
+            <li class="question-item">
+              <svg class="icon-question" width="24" height="24">
+                <use href="./images/icons.svg#icon-plus-circle"></use>
+              </svg>
+              <b class="question-text">Can I upgrade my plan?</b>
+            </li>
+            <li class="question-item">
+              <svg class="icon-question" width="24" height="24">
+                <use href="./images/icons.svg#icon-plus-circle"></use>
+              </svg>
+              <b class="question-text">Can I cancel my plan at anytime?</b>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- promo -->
-      <section class="section promo-section">
+      <section class="section promo-section pricing">
         <div class="container">
           <h2 class="visually-hidden">Promo</h2>
           <div class="wrap-promo">
@@ -199,7 +258,7 @@
         </div>
       </section>
     </main>
-    <footer class="section footer-section">
+    <footer class="section footer-section pricing">
       <div class="container">
         <div class="footer-wrap-container">
           <div class="wrap-logo-sociale">
